--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">loftmoney</string>
+    <string name="edittext_title_hint">Title</string>
+    <string name="edittext_cost_hint">Cost</string>
+    <string name="text_button1">Add</string>
 </resources>
